key Generation and Matrixes in the works - more tests needed; config.ini values updated; agent set-request improved; good progress

--- a/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
+++ b/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
@@ -1,8 +1,18 @@
 [Agent]
 ip = 127.0.0.2
 snmpport = 162
-K = 3
-M = 5
-T = 5000
-V = 100
-X = 500
+
+
+
+; SYSTEM: K - The number of bytes (K) of each generated key or size of Z (kxk)
+;         T - The number of milliseconds of the updating interval of the internal Z matrix.
+;         X - The maximum number of generated keys that are still valid.
+;         V - The number of seconds of the TTL of the generated keys.
+; CONFIG: M - The master double key M with at least K*2 bytes in size.
+
+[Other]
+K = 10                                       
+T = 30000                                        
+X = 100                                          
+V = 120                                          
+M = estachaveébueseguraaodasiffawefawefwef
