major changes: new comments in code; encryption and authenticity implemented; mib.mib in line with json; many other small changes

--- a/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
+++ b/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
@@ -16,3 +16,4 @@ T = 30000
 X = 100                                          
 V = 60                                          
 M = 07994506586870582923
+KEY = We6kV966jwDVEW6m6FCAaMW7p5gW5paNXT0GRY2HtzU=
