added new comments; file info and auther in beggining of file; removed debugging prints

--- a/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
+++ b/Trabalhos & Testes/TP1/SNMPkeyShare/config.ini
@@ -1,14 +1,17 @@
+;
+; Autor: Rui Chaves (ruichaves99@gmail.com)
+; Descrição: Ficheiro de configuração que contém todas as valores iniciais que irão ser definidos aquando da iniciação do agente. 
+;
+; Outras informações relevantes:
+;   SYSTEM: K - The number of bytes (K) of each generated key or size of Z (kxk)
+;           T - The number of milliseconds of the updating interval of the internal Z matrix.
+;           X - The maximum number of generated keys that are still valid.
+;           V - The number of seconds of the TTL of the generated keys.
+;   CONFIG: M - The master double key M with at least K*2 bytes in size.
+
 [Agent]
 ip = 127.0.0.2
 snmpport = 162
-
-
-
-; SYSTEM: K - The number of bytes (K) of each generated key or size of Z (kxk)
-;         T - The number of milliseconds of the updating interval of the internal Z matrix.
-;         X - The maximum number of generated keys that are still valid.
-;         V - The number of seconds of the TTL of the generated keys.
-; CONFIG: M - The master double key M with at least K*2 bytes in size.
 
 [Other]
 K = 10                                       
